--- a/Python/Data-Structures-using-Python-master/Linked Lists/Linked Lists.ipynb
+++ b/Python/Data-Structures-using-Python-master/Linked Lists/Linked Lists.ipynb
@@ -336,8 +336,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "cbc5014ed32a3511c99c810aecedbd8e5a5c878610fa20b4667810c497ccaeea"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -351,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
