--- a/Python/Data-Structures-using-Python-master/Queue/Queue.ipynb
+++ b/Python/Data-Structures-using-Python-master/Queue/Queue.ipynb
@@ -157,6 +157,68 @@
     "* Circular Queue: A queue in which last position is connected back to front\n",
     "* Priority Queue: Elements are added based on their priorities (higher priority elements are popped first)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python3 program to count number of\n",
+    "# substrings with exactly k distinct\n",
+    "# characters in a given string\n",
+    "\n",
+    "# Function to count number of substrings\n",
+    "# with exactly k unique characters\n",
+    "def countkDist(str1, k):\n",
+    "\tn = len(str1)\n",
+    "\t\n",
+    "\t# Initialize result\n",
+    "\tres = 0\n",
+    "\n",
+    "\t# To store count of characters from\n",
+    "\t# 'a' to 'z'\n",
+    "\tcnt = [0] * 27\n",
+    "\n",
+    "\t# Consider all substrings beginning\n",
+    "\t# with str[i]\n",
+    "\tfor i in range(0, n):\n",
+    "\t\tdist_count = 0\n",
+    "\n",
+    "\t\t# Initializing array with 0\n",
+    "\t\tcnt = [0] * 27\n",
+    "\n",
+    "\t\t# Consider all substrings between str[i..j]\n",
+    "\t\tfor j in range(i, n):\n",
+    "\t\t\t\n",
+    "\t\t\t# If this is a new character for this\n",
+    "\t\t\t# substring, increment dist_count.\n",
+    "\t\t\tif(cnt[ord(str1[j]) - 97] == 0):\n",
+    "\t\t\t\tdist_count += 1\n",
+    "\n",
+    "\t\t\t# Increment count of current character\n",
+    "\t\t\tcnt[ord(str1[j]) - 97] += 1\n",
+    "\n",
+    "\t\t\t# If distinct character count becomes k,\n",
+    "\t\t\t# then increment result.\n",
+    "\t\t\tif(dist_count == k):\n",
+    "\t\t\t\tres += 1\n",
+    "\t\t\tif(dist_count > k):\n",
+    "\t\t\t\tbreak\n",
+    "\n",
+    "\treturn res\t\n",
+    "\n",
+    "# Driver Code\n",
+    "if __name__ == \"__main__\":\n",
+    "\tstr1 = \"abcbaa\"\n",
+    "\tk = 3\n",
+    "\tprint(\"Total substrings with exactly\", k,\n",
+    "\t\t\"distinct characters : \", end = \"\")\n",
+    "\tprint(countkDist(str1, k))\n",
+    "\n",
+    "# This code is contributed by\n",
+    "# Sairahul Jella\n"
+   ]
   }
  ],
  "metadata": {
