--- a/revision.ipynb
+++ b/revision.ipynb
@@ -8267,10 +8267,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 5 7 7 8 1 2 8 \n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1, 2, 5, 7, 7, 8, 1, 2, 8\n",
+    "\n",
+    "class Node():\n",
+    "    def __init__(self,data):\n",
+    "        self.data=data\n",
+    "        self.next=None\n",
+    "class LinkedList():\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "        \n",
+    "    def removeDuplicate(self):\n",
+    "        ptr1 = None\n",
+    "        ptr2 = None\n",
+    "        dup = None\n",
+    "        ptr1 = self.head\n",
+    "        \n",
+    "        while ptr1 != None and ptr1.next != None:\n",
+    "            ptr2 = ptr1\n",
+    "            \n",
+    "            while ptr2.next != None:\n",
+    "                if ptr1.data == ptr2.next.data:\n",
+    "                    dup = ptr2.next\n",
+    "                    ptr2.next = ptr2.next.next\n",
+    "                else:\n",
+    "                    ptr2 = ptr2.next\n",
+    "            ptr1 = ptr1.next\n",
+    "    \n",
+    "    def printList(self):\n",
+    "        temp=self.head\n",
+    "        while temp != None:\n",
+    "            print(temp.data,end=\" \")\n",
+    "            temp=temp.next\n",
+    "        print()\n",
+    "        \n",
+    "    def insertAtStart(self, data):\n",
+    "        newNode = Node(data)\n",
+    "        newNode.next = self.head\n",
+    "        self.head = newNode\n",
+    "    \n",
+    "    def insertAtEnd(self, data):\n",
+    "        if self.head is None:\n",
+    "            self.head = Node(data)\n",
+    "            return\n",
+    "        itr = self.head\n",
+    "        while itr.next:\n",
+    "            itr = itr.next\n",
+    "        itr.next = Node(data)\n",
+    "    \n",
+    "    def insert_at(self, index, data):\n",
+    "        if index<0 or index>self.get_length():\n",
+    "            raise Exception(\"Invalid Index\")\n",
+    "        if index==0:\n",
+    "            self.insertAtStart(data)\n",
+    "            return\n",
+    "        count = 0\n",
+    "        itr = self.head\n",
+    "        while itr:\n",
+    "            if count == index - 1:\n",
+    "                node = Node(data)\n",
+    "                itr.next = node\n",
+    "                break\n",
+    "            itr = itr.next\n",
+    "            count += 1\n",
+    "    \n",
+    "    def remove_at(self, index):\n",
+    "        if index<0 or index>=self.get_length():\n",
+    "            raise Exception(\"Invalid Index\")\n",
+    "        if index==0:\n",
+    "            self.head = self.head.next\n",
+    "            return\n",
+    "        count = 0\n",
+    "        itr = self.head\n",
+    "        while itr:\n",
+    "            if count == index - 1:\n",
+    "                itr.next = itr.next.next\n",
+    "                break\n",
+    "            itr = itr.next\n",
+    "            count+=1\n",
+    "    \n",
+    "    def insert_values(self, data_list):\n",
+    "        self.head = None\n",
+    "        for data in data_list:\n",
+    "            self.insert_at_end(data)\n",
+    "\n",
+    "        \n",
+    "    def get_length(self):\n",
+    "        count = 0\n",
+    "        itr = self.head\n",
+    "        while itr:\n",
+    "            count+=1\n",
+    "            itr = itr.next\n",
+    "        return count\n",
+    "        \n",
+    "        \n",
+    "list =LinkedList()\n",
+    "list.insertAtStart(5)\n",
+    "list.insertAtEnd(7)\n",
+    "list.insertAtEnd(7)\n",
+    "list.insertAtEnd(8)\n",
+    "list.insertAtEnd(1)\n",
+    "list.insertAtEnd(2)\n",
+    "list.insertAtEnd(8)\n",
+    "list.insertAtStart(2)\n",
+    "# list.insert_at(2,4)\n",
+    "\n",
+    "list.printList()\n",
+    "print(list.get_length())\n",
+    "# list.removeDuplicate()\n",
+    "# list.printList()\n",
+    "\n",
+    "# 1, 2, 5, 7, 7, 8, 1, 2, 8"
+   ]
   }
  ],
  "metadata": {
