--- a/Python/Data-Structures-using-Python-master/Trees/Tree.ipynb
+++ b/Python/Data-Structures-using-Python-master/Trees/Tree.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "' This will a create like this \\n                    1\\n                /                   2            3\\n        /\\n    4\\n'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,8 +233,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "cbc5014ed32a3511c99c810aecedbd8e5a5c878610fa20b4667810c497ccaeea"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -248,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
